# timeseries_turbit

./: .gitignore  DESCRIPTION.MD  DESCRIPTION.MD~  README.md  docker-compose.yml  docker-compose.yml~  pyproject.toml
database/: .bash_history  WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--1796115303063843321.wt  collection-2--1796115303063843321.wt  collection-4--1796115303063843321.wt  collection-7--1796115303063843321.wt  index-1--1796115303063843321.wt  index-1-5581913472990811023.wt  index-3--1796115303063843321.wt  index-5--1796115303063843321.wt  index-6--1796115303063843321.wt  index-8--1796115303063843321.wt  index-9--1796115303063843321.wt  sizeStorer.wt
database/.mongodb/mongosh/: 65ca6168a21f4251e2096fa5_log  65ca6169acfa5c9c09e06800_log  65ca6278cdd086d45c300454_log  65cb4e410da1508da46c9480_log  65cb5679852daa98aa1f5ff6_log  65cb567a6fa0aa3b1ca3a2d7_log  65cb579682a3a3f4f8846f38_log  65cc953dec31e3163cdb3f85_log  65ccd92a02f6aa3aca19bad9_log  65cce5af81e5e74b6fc11265_log  config  mongosh_repl_history
database/.mongodb/mongosh/snippets/: package.json
database/diagnostic.data/: metrics.2024-02-13T11-46-00Z-00000  metrics.2024-02-14T18-25-54Z-00000
timeseries/: NOTES.md  NOTES.md~  import_data.py  import_data.py~  main.py  main.py~  model_classes.py  model_classes.py~  scratch.py  scratch.py~
